# optiga-trust-m

./: CMakeLists.txt  Kconfig  component.mk
optiga/include/optiga/: optiga_lib_config_m_v1.h
pal/esp32_freertos/: pal_i2c.c
